deploy: 28642356f2c71bc71e1cf7e6fee97bfa85133cec

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="module" crossorigin src="/assets/main-C9h7W_gh.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-326aI0Mm.css">
+    <script type="module" crossorigin src="/backi/assets/main-C9h7W_gh.js"></script>
+    <link rel="stylesheet" crossorigin href="/backi/assets/main-326aI0Mm.css">
   </head>
   <body>
     <div id="backi"></div>
